cabal-version:      2.4
name:               myScheme
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             'Naved'
maintainer:         'rizvinavedis@gmail.com'

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable myScheme
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:    
        base ^>=4.14.2.0
      , parsec
